[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Sara Smith", email = "sara.smith@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest>=3.0",
	"numpy",
	"matplotlib",
	"scipy",
    "scikit-learn"
]